src/base/objects/Contact/fields/Acct_Name__c.field-meta.xml
<CustomField>
    <fullName>Acct_Name__c</fullName>
    <description>Text Version of Account Name used for Mailchimp.</description>
    <formula>Account.Name</formula>
    <label>Acct Name</label>
    <type>Text</type>
</CustomField>