src/base/objects/Contact/fields/Active_Trade_Surveillance__c.field-meta.xml
<CustomField>
    <fullName>Active_Trade_Surveillance__c</fullName>
    <businessOwnerGroup>Data_Owner_Trust_Risk</businessOwnerGroup>
    <defaultValue>false</defaultValue>
    <description>When a Trade Surveillance case is created the Contact needs to be flagged as actively engaged with Trade Surveillance so support or sales agents are aware</description>
    <inlineHelpText>Actively engaged with Trade Surveillance</inlineHelpText>
    <label>Active Trade Surveillance</label>
    <type>Checkbox</type>
</CustomField>