src/base/objects/Contact/fields/Anti_Bribery_Corruption_Policy__c.field-meta.xml
<CustomField>
    <fullName>Anti_Bribery_Corruption_Policy__c</fullName>
    <businessOwnerGroup>Data_Owner_Sales_Trading_Prime</businessOwnerGroup>
    <formula>IF(
    RecordType.DeveloperName == &apos;Institutional&apos;, 
    IF(
        Account.RecordType.DeveloperName == &apos;Institutional&apos;, 
        TEXT(Account.Anti_Bribery_Corruption_Policy__c), &apos;&apos;
    ),
    &apos;&apos;
)</formula>
    <inlineHelpText>As per the STP Anti-Bribery &amp; Corruption policy, please update related Accounts as Government or Covered Entities/Individuals as relevant.</inlineHelpText>
    <label>Anti-Bribery &amp; Corruption Policy</label>
    <type>Text</type>
</CustomField>