src/base/objects/Contact/fields/Application_Code__c.field-meta.xml
<CustomField>
    <fullName>Application_Code__c</fullName>
    <businessOwnerGroup>Data_Owner_Sales_Trading_Prime</businessOwnerGroup>
    <formula>Account.Reference_ID__c</formula>
    <label>Application Code</label>
    <type>Text</type>
</CustomField>