src/base/objects/Contact/fields/Converted_Lead_Id__c.field-meta.xml
<CustomField>
    <fullName>Converted_Lead_Id__c</fullName>
    <label>Converted Lead Id</label>
    <length>18</length>
    <type>Text</type>
</CustomField>