src/base/objects/Contact/fields/Discord_User__c.field-meta.xml
<CustomField>
    <fullName>Discord_User__c</fullName>
    <label>Discord User</label>
    <length>255</length>
    <type>Text</type>
</CustomField>