src/base/objects/Contact/fields/Inactive__c.field-meta.xml
<CustomField>
    <fullName>Inactive__c</fullName>
    <defaultValue>false</defaultValue>
    <description>An inactive contact is one who is not longer with a company; however, their records are important to keep attached to an account.</description>
    <inlineHelpText>Select this if the contact is no longer with the associated account.</inlineHelpText>
    <label>Inactive</label>
    <type>Checkbox</type>
</CustomField>