src/base/objects/Contact/fields/Katakana_Name__c.field-meta.xml
<CustomField>
    <fullName>Katakana_Name__c</fullName>
    <businessOwnerGroup>Data_Owner_CX</businessOwnerGroup>
    <complianceGroup>CCPA</complianceGroup>
    <description>SFDCCP-467</description>
    <label>Katakana Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>