src/base/objects/Contact/fields/Slack__c.field-meta.xml
<CustomField>
    <fullName>Slack__c</fullName>
    <description>SFCC-1156: Update Slack Customer Group link and Email addresses from Slack.</description>
    <label>Slack</label>
    <length>255</length>
    <type>Text</type>
</CustomField>