src/base/objects/Contact/fields/Telegram_Number__c.field-meta.xml
<CustomField>
    <fullName>Telegram_Number__c</fullName>
    <label>Telegram Number</label>
    <type>Phone</type>
</CustomField>