src/base/objects/Contact/fields/UBO_ID__c.field-meta.xml
<CustomField>
    <fullName>UBO_ID__c</fullName>
    <businessOwnerGroup>Data_Owner_CX</businessOwnerGroup>
    <externalId>true</externalId>
    <label>UBO ID</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>