src/base/objects/Contact/fields/Unverified_User__c.field-meta.xml
<CustomField>
    <fullName>Unverified_User__c</fullName>
    <businessOwnerGroup>Data_Owner_Sales_Trading_Prime</businessOwnerGroup>
    <defaultValue>false</defaultValue>
    <description>OPS-6601</description>
    <inlineHelpText>If the checkbox is marked &quot;TRUE&quot; the Contact has not been verified by the Account to be an Authorized User</inlineHelpText>
    <label>Unverified User</label>
    <type>Checkbox</type>
</CustomField>