src/base/objects/Contact/listViews/All_Contacts.listView-meta.xml
<ListView>
    <fullName>All_Contacts</fullName>
    <columns>FULL_NAME</columns>
    <columns>ACCOUNT.NAME</columns>
    <columns>CONTACT.PHONE1</columns>
    <columns>CONTACT.EMAIL</columns>
    <columns>CONTACT.TITLE</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <columns>CONTACT.CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <label>All Contacts</label>
    <sharedTo>
        <group>Bison_Team</group>
    </sharedTo>
</ListView>